--- a/Ionic/09-fotogram/package.json
+++ b/Ionic/09-fotogram/package.json
@@ -71,7 +71,9 @@
     "plugins": {
       "cordova-sqlite-storage": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
